test_data/Json/ContainedInEnvironment/Unexpected/Unserializable/InvalidModelType/ConceptDescription/invalidModelType.json.exception
conceptDescriptions[0]: Invalid modelType, expected 'ConceptDescription', but got: 'aCompletelyInvalidModelType'